# NoiseG

./: CMakeLists.txt  README.md  index.html  sometext.txt
plugin/: CMakeLists.txt
plugin/assets/: Sprite-0002.aseprite
plugin/build_output/NoiseG.vst3/Contents/: Info.plist
plugin/include/NoiseG/: Box2d.h  CustomLookAndFeel.h  MyVoice.h  NinjaAnimator.h  NoiseGenerator.h  Oscillator.h  PluginEditor.h  PluginProcessor.h  Synth.h  Utils.h  Voice.h
plugin/source/: Box2d.cpp  CustomLookAndFeel.cpp  MyVoice.cpp  NinjaAnimator.cpp  PluginEditor.cpp  PluginProcessor.cpp  Synth.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
